--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity
             android:name=".activity.InputScheduleDateActivity"
+            android:label="予定日入力"
             android:theme="@style/AppTheme" />
         <activity android:name=".activity.DevModeTesterActivity"></activity>
     </application>
