--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
@@ -30,11 +31,11 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.google.android.gms:play-services-plus:11.4.2'
+    implementation 'com.google.android.gms:play-services-plus:11.6.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     wearApp project(':wear')
-    implementation 'com.google.android.gms:play-services-wearable:11.4.2'
-    compile 'com.google.firebase:firebase-core:11.4.2'
+    implementation 'com.google.android.gms:play-services-wearable:11.6.0'
+    compile 'com.google.firebase:firebase-core:11.6.0'
 }
